<resources>
    <string name="app_name">Figures</string>
    <string name="main_button">Compilar</string>
    <string name="input_text">Ingrese su accion</string>
    <string name="error_button">Reporte de Errores</string>
    <string name="back_main">Regresar</string>
    <string name="animate">Animar</string>
    <string name="report">Reportes</string>
    <string name="report_Title">Reporte de Elementos</string>
    <string name="report_operators">Reporte de Operadores Matematicos</string>
    <string name="report_colors">Repores de Colores Usados</string>
    <string name="report_figures">Repores de Objetos Usados</string>
    <string name="report_animations">Repores de Animaciones hechas</string>
    <string name="report_errors">Reporte de Errores</string>

</resources>