<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tvTitleReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/report_Title"
        android:textAlignment="center"
        android:textColor="@color/main_blue"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleReport">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvReportOperators"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/report_operators"
                android:textAlignment="center"
                android:textColor="@color/main_blue"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/svMainTable1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:id="@+id/svMainTable1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toTopOf="@+id/tvReportColors"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvReportOperators">

                <LinearLayout
                    android:id="@+id/layoutTable1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ScrollView
                        android:id="@+id/svTable1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:scrollbars="vertical">

                        <HorizontalScrollView
                            android:id="@+id/hsvTable1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scrollbars="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TableLayout
                                    android:id="@+id/tlTableOperators"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"></TableLayout>
                            </LinearLayout>
                        </HorizontalScrollView>
                    </ScrollView>
                </LinearLayout>
            </ScrollView>

            <TextView
                android:id="@+id/tvReportColors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/report_colors"
                android:textColor="@color/main_blue"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/svMainTable2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/svMainTable1" />

            <ScrollView
                android:id="@+id/svMainTable2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toTopOf="@+id/tvReportFigures"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvReportColors">

                <LinearLayout
                    android:id="@+id/layoutTable2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ScrollView
                        android:id="@+id/svTable2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:scrollbars="vertical">

                        <HorizontalScrollView
                            android:id="@+id/hsvTable2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scrollbars="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TableLayout
                                    android:id="@+id/tlTableColors"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"></TableLayout>
                            </LinearLayout>
                        </HorizontalScrollView>
                    </ScrollView>
                </LinearLayout>
            </ScrollView>

            <TextView
                android:id="@+id/tvReportFigures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/report_figures"
                android:textColor="@color/main_blue"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/svMainTable3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/svMainTable2" />

            <ScrollView
                android:id="@+id/svMainTable3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toTopOf="@+id/tvReportAnimation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvReportFigures">

                <LinearLayout
                    android:id="@+id/layoutTable3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ScrollView
                        android:id="@+id/svTable3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:scrollbars="vertical">

                        <HorizontalScrollView
                            android:id="@+id/hsvTable3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scrollbars="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TableLayout
                                    android:id="@+id/tlTableFigures"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"></TableLayout>
                            </LinearLayout>
                        </HorizontalScrollView>
                    </ScrollView>
                </LinearLayout>
            </ScrollView>

            <TextView
                android:id="@+id/tvReportAnimation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/report_animations"
                android:textColor="@color/main_blue"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/svMainTable4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/svMainTable3" />

            <ScrollView
                android:id="@+id/svMainTable4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvReportAnimation">

                <LinearLayout
                    android:id="@+id/layoutTable4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ScrollView
                        android:id="@+id/svTable4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:scrollbars="vertical">

                        <HorizontalScrollView
                            android:id="@+id/hsvTable4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scrollbars="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TableLayout
                                    android:id="@+id/tlTableAnimation"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"></TableLayout>
                            </LinearLayout>
                        </HorizontalScrollView>
                    </ScrollView>
                </LinearLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>